tests/snapshots/eval__scoping__block_reassign_affects_outer.snap
---
source: tests/eval.rs
expression: "run(\"var x = 1\\n{ x = 2 }\\nprint(x)\")"
---
Ok(
    "2\n",
)
