tests/snapshots/eval__scoping__block_shadows_outer.snap
---
source: tests/eval.rs
expression: "run(\"var x = 1\\n{ var x = 2\\n print(x) }\\nprint(x)\")"
---
Ok(
    "2\n1\n",
)
