tests/snapshots/eval__scoping__reassign_across_types.snap
---
source: tests/eval.rs
expression: "run(\"var x = 1\\nx = \\\"hi\\\"\\nprint(x)\")"
---
Ok(
    "hi\n",
)
