tests/snapshots/eval__scoping__reassign_const_fails.snap
---
source: tests/eval.rs
expression: "run(\"const pi = 3.14\\npi = 3.0\")"
---
Err(
    EvalError {
        category: Name,
        message: "cannot reassign const `pi`",
        span: Span {
            start: 16,
            end: 24,
        },
        cause: None,
    },
)
